--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Deployment
 
 on:
   workflow_dispatch:
@@ -51,3 +51,37 @@ jobs:
           tags: 533267353564.dkr.ecr.ap-northeast-1.amazonaws.com/surl-go:${{ steps.short-sha.outputs.sha }}
           cache-from: type=gha
           cache-to: type=gha
+
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4.1.0
+        with:
+          role-to-assume: ${{ vars.CD_ROLE_ARN }}
+          aws-region: ap-northeast-1
+
+      - name: Deploy to EC2 via SSH
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ vars.EC2_HOST }}
+          username: ${{ vars.EC2_USER }}
+          key: ${{ vars.SSH_PRIVATE_KEY }}
+          script: |
+            aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin 533267353564.dkr.ecr.ap-northeast-1.amazonaws.com
+            sudo docker pull 533267353564.dkr.ecr.ap-northeast-1.amazonaws.com/surl-go:${{ needs.build-and-push.outputs.short-sha }}
+            sudo docker stop surl-go || true
+            sudo docker rm surl-go || true
+            sudo docker run -d --name surl-go \
+              -p 8080:8080 \
+              --memory=750m \
+              --memory-swap=750m \
+              -e API_HOST=0.0.0.0 \
+              -e API_PORT=8080 \
+              -e API_VERSION=v1 \
+              533267353564.dkr.ecr.ap-northeast-1.amazonaws.com/surl-go:${{ needs.build-and-push.outputs.short-sha }}
